--- a/test/test.html
+++ b/test/test.html
@@ -4,10 +4,11 @@
   <link rel="stylesheet" type="text/css" href="../dist/bundle/asciinema-player.css" />
 </head>
 <body>
+<p>COUCOUC</p>
   <div id="demo"></div>
   <script src="../dist/bundle/asciinema-player.js"></script>
   <script>
-    AsciinemaPlayer.create('demo.cast', document.getElementById('demo'), { controls: true, markers: [[5.0,   "Installation"]] });
+    AsciinemaPlayer.create('aze', document.getElementById('demo'), { controls: true, markers: [[5.0,   "Installation"]] });
   </script>
 </body>
 </html>
